<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ProtectRelay_VIP410" Id="{fa34c75b-a9f3-4719-8f61-219377d366fd}">
    <Declaration><![CDATA[TYPE ProtectRelay_VIP410 :
STRUCT
		MesData						: ProtectRelay; 	(* (NA) MesData 																												*)
		MesStatCom					: BOOL ; 			(* (NA) False: device did not respond successfully to most recent read or write request, True: device is responding normally	*)
		MesAvgI1					: REAL ; 			(* (A) Phase 1 Average current                                                                                       			*)
		MesAvgI2					: REAL ; 			(* (A) Phase 2 Average current                                                                                       			*)
		MesAvgI3					: REAL ; 			(* (A) Phase 3 Average current                                                                                       			*)
		MesI0Fault					: REAL ; 			(* (A) Fault current                                                                                                 			*)
		StatusWord					: WORD ; 			(* (NA) Status Word                                                                                                     		*)
		ControlWord					: WORD ; 			(* (NA) Control Word                                                                                                    		*)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>